# drc-names-corpus

./: .gitignore  AGENTS.md  METHOLOGY.md  README.md  pyproject.toml
reports/extraction_analysis/: extraction_error_rate.csv  names_by_file.csv
reports/figures/: ablation_scatter.pgf  data_quality_overview.pgf  diversity_by_province.pgf  diversity_by_year.pgf  extraction_error_rate.pgf  files_report_scatter.pgf  first_token_frequency.pgf  last_token_frequency.pgf  letter_frequency_full_name.pgf  letter_frequency_probable_native.pgf  letter_frequency_probable_surname.pgf  long_tail_by_province.pgf  long_tail_by_year.pgf  long_tail_overall.pgf  name_length_distribution.pgf  name_structure_summary.pgf  names_by_file_scatter.pgf  names_by_province_gender.pgf  names_by_year_gender.pgf  names_by_year_simple_complex.pgf  names_overview.pgf  normalized_duplicate_names.pgf  probable_native_ngrams_2.pgf  probable_native_ngrams_3.pgf  probable_native_ngrams_4.pgf  probable_native_ngrams_5.pgf  probable_native_transition_matrix.pgf  probable_surname_ngrams_2.pgf  probable_surname_ngrams_3.pgf  probable_surname_ngrams_4.pgf  probable_surname_ngrams_5.pgf  probable_surname_transition_matrix.pgf  region_overlap.pgf  token_count_distribution.pgf  unusual_names.pgf
reports/file_analysis/: ablation_report.csv  files_report.csv
reports/name_analysis/: data_quality_overview.csv  diversity_by_province.csv  diversity_by_year.csv  first_token_frequency.csv  first_token_frequency_female.csv  first_token_frequency_male.csv  last_token_frequency.csv  last_token_frequency_female.csv  last_token_frequency_male.csv  letter_frequency_full_name.csv  letter_frequency_probable_native.csv  letter_frequency_probable_surname.csv  long_tail_by_province.csv  long_tail_by_year.csv  long_tail_overall.csv  name_length_distribution.csv  name_morphology_flags.csv  name_structure_summary.csv  names_by_province.csv  names_by_year.csv  names_overview.csv  normalized_duplicate_names.csv  probable_native_ngrams_2.csv  probable_native_ngrams_3.csv  probable_native_ngrams_4.csv  region_overlap.csv  (+9 more)
(+37 files in other folders)
